RE #21: Fixed margin-bottom on nav-pills nav-link on mobile

--- a/src/components/nav/styles.scss
+++ b/src/components/nav/styles.scss
@@ -201,8 +201,12 @@
 }
 
 .nav-pills .nav-link {
-  margin: 0 .25rem 0 0;
+  margin: 0 .25rem .25rem 0;
   background-color: $gray-400;
+}
+
+.nav-pills .nav-link + .dropdown-menu {
+  margin-top: -.125rem;
 }
 
 .nav-pills-sm .nav-link {
